# pyenv-native

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INSTRUCTIONS.md  MCP.md  MEMORY.md  README.md  bugfix.md  install.ps1  install.sh  plugin.json  rust-toolchain.toml  test.rs  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json
.github/rulesets/: protect-main.json
.github/workflows/: ci.yml  release.yml
crates/pyenv-cli/: Cargo.toml
crates/pyenv-cli/src/: cli.rs  dispatch.rs  main.rs
crates/pyenv-core/: Cargo.toml
crates/pyenv-core/data/: known_versions.txt
crates/pyenv-core/src/: catalog.rs  command.rs  config.rs  context.rs  doctor.rs  error.rs  executable.rs  http.rs  install.rs  lib.rs  manage.rs  meta.rs  plugin.rs  process.rs  runtime.rs  self_update.rs  shell.rs  shim.rs  text.rs  venv.rs  venv_compat.rs  venv_paths.rs  version.rs
crates/pyenv-core/src/catalog/: commands.rs  entries.rs  families.rs  latest.rs  mod.rs  tests.rs  types.rs
crates/pyenv-core/src/config/: commands.rs  mod.rs  storage.rs  tests.rs  types.rs  values.rs
crates/pyenv-core/src/doctor/: checks.rs  fixes.rs  helpers.rs  mod.rs  report.rs  tests.rs  types.rs
crates/pyenv-core/src/executable/: commands.rs  lookup.rs  mod.rs  tests.rs
crates/pyenv-core/src/install/: archive.rs  fetch.rs  mod.rs  plans.rs  platform.rs  report.rs  runtime_support.rs  types.rs
crates/pyenv-core/src/install/providers/: catalog.rs  mod.rs  python_build.rs  versioning.rs
crates/pyenv-core/src/install/runtime/: mod.rs  native.rs  python_build.rs  shared.rs  source.rs
crates/pyenv-core/src/install/tests/: archive_tests.rs  catalog_tests.rs  mod.rs  plan_tests.rs  report_tests.rs  support.rs
crates/pyenv-core/src/manage/: commands.rs  helpers.rs  mod.rs  tests.rs  types.rs
crates/pyenv-core/src/meta/: commands.rs  compat_docs.rs  completions.rs  docs.rs  help.rs  mod.rs  prompt.rs  shims.rs  status.rs  tests.rs
crates/pyenv-core/src/meta/public_docs/: core.rs  environment.rs  mod.rs  system.rs
crates/pyenv-core/src/pip/: helper.py  mod.rs  operations.rs  tests.rs  types.rs
crates/pyenv-core/src/plugin/: commands.rs  discovery.rs  hooks.rs  mod.rs  process.rs  tests.rs  types.rs
crates/pyenv-core/src/preflight/: android.rs  gate.rs  intel.rs  macos.rs  mod.rs  report.rs  tests.rs  types.rs
crates/pyenv-core/src/runtime/: inventory.rs  mod.rs  search.rs  tests.rs
crates/pyenv-core/src/self_update/: github.rs  mod.rs  runner.rs  tests.rs  types.rs  uninstall.rs  versioning.rs
crates/pyenv-core/src/shell/: helpers.rs  init.rs  mod.rs  tests.rs  types.rs
crates/pyenv-core/src/shell/emit/: activation.rs  environment.rs  functions.rs  mod.rs  quotes.rs
crates/pyenv-core/src/shim/: exec.rs  mod.rs  paths.rs  rehash.rs  render.rs  tests.rs  types.rs
crates/pyenv-core/src/version/: commands.rs  files.rs  mod.rs  selection.rs  tests.rs  types.rs
crates/pyenv-gui/: Cargo.toml  tauri.conf.json
crates/pyenv-gui/capabilities/: main.json
crates/pyenv-gui/desktop/: com.pyenv-native.gui.desktop
crates/pyenv-gui/src/: desktop_integration.rs  main.rs
crates/pyenv-gui/ui/: app.js  dom-utils.js  index.html  styles.css
crates/pyenv-mcp/: Cargo.toml
crates/pyenv-mcp/src/: main.rs  model.rs  ops.rs  service.rs
crates/pyenv-mcp/src/ops/: context.rs  mod.rs  pip.rs  project.rs  runtime.rs  tests.rs
crates/pyenv-mcp/src/ops/docs/: guide.rs  install.rs  mod.rs  summaries.rs  workflows.rs
docs/: ARCHITECTURE.md  CLI.md  GUI.md  INSTRUCTIONS.md  MCP.md  cursor-setup.md
docs/agent-skills/: README.md  antigravity.md  claude-code.md  copilot.md  cursor.md  gemini-cli.md  getting-started.md  kiro.md  opencode.md  windsurf.md
packaging/homebrew/: README.md
packaging/winget/: README.md
python-package/: LICENSE  README.md  pyproject.toml
python-package/src/pyenv_native_bootstrap/: __init__.py  __main__.py  bundle.py  cli.py  github.py  installer.py  platforms.py
python-package/tests/: __init__.py  test_bundle.py  test_github.py  test_installer.py
scripts/: Check-Env.ps1  Clear-Cache.ps1  Run-Tests.ps1  Run-Tests.sh  Sync-Dependencies.ps1  apply-main-branch-protection.ps1  apply-main-branch-protection.sh  build-homebrew-formula.ps1  build-python-bootstrap.ps1  build-release-bundle.ps1  build-release-bundle.sh  build-winget-manifests.ps1  check-gui-patterns.sh  check-shell-eol.sh  check-version-sync.ps1  check-version-sync.sh  convert_screenshots.py  dev-cargo.ps1  install-agent-skills.ps1  install-agent-skills.sh  install-cursor-skills.ps1  install-gui-desktop.sh  install-pyenv-native.ps1  install-pyenv-native.sh  launch_gui.ps1  publish-github-release.ps1  publish-pypi.ps1  python-common.ps1  set-version.ps1  smoke-shells.ps1  smoke-shells.sh  svg2Icons.py  sync-known-versions.ps1  test-python-bootstrap.ps1  uninstall-pyenv-native.ps1  uninstall-pyenv-native.sh
scripts/gui-a11y/: check-a11y.mjs  package-lock.json  package.json
skills/pyenv-native/: SKILL.md
