[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pyenv-native"
version = "0.1.9"
description = "Python install package for the native-first pyenv-native runtime bundles."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Roy Dawson IV", email = "Roy.Dawson.IV@gmail.com" },
]
keywords = ["pyenv", "python", "windows", "bootstrap", "pipx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
]

[project.urls]
Homepage = "https://github.com/imyourboyroy"
Repository = "https://github.com/imyourboyroy/pyenv-native"
Issues = "https://github.com/imyourboyroy/pyenv-native/issues"

[project.scripts]
pyenv-native = "pyenv_native_bootstrap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyenv_native_bootstrap"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pyenv_native_bootstrap",
  "tests",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]



