[package]
name = "pyenv-gui"
version.workspace = true
edition.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
pyenv-core = { path = "../pyenv-core" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
rfd = "0.17.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
