[package]
name = "pyenv-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
pyenv-core = { path = "../pyenv-core" }
rmcp = { version = "1.2.0", features = ["transport-io"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "io-std"] }

[dev-dependencies]
tempfile = "3.23"
