[package]
name = "pyenv-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6.2", features = ["derive"] }
pyenv-core = { path = "../pyenv-core" }
rmcp = { version = "2.2.0", features = ["transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "io-std"] }

[dev-dependencies]
tempfile = "3.27.0"
